# powersddp

./: .gitignore  CITATION.cff  LICENSE.md  Makefile  Notebook.ipynb  README.md  pyproject.toml  system-2hgu.yml  system-hydro.yml  system.yml
powersddp/: __init__.py
powersddp/core/: api.py  solver.py  system.py
powersddp/service/solver/: _algorithms.py  _logging.py  _plot.py  api.py
powersddp/service/system/: _logging.py  _plot.py  _result.py  _solver.py  _verbose.py  api.py
powersddp/util/: _yml.py
powersddp/utils/: _pdde.py  _solver.py  _yml.py
systems-data/: 2hgu.txt  system-2hgu-hydro.yml  system-2hgu-thermal.yml  system-2hgu.yml
tests/: test_powersddp.py  test_system.py
