[tool.poetry]
name = "powersddp"
version = "0.0.1"
description = "A Stochastic Dual Dynamic Programmimg library to solve economical dispach of power systems"
authors = ["Ettore Aquino <ettore@ettoreaquino.com>"]

repository = "https://github.com/ettoreaquino/powersddp.git"

readme = "README.md"

exclude = ["Makefile","README.rst","Notebook.ipynb"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
cvxopt = "^1.2.6"
numpy = "^1.21.1"
pandas = "^1.3.2"
plotly = "^5.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
pylint = "^2.9.6"
mypy = "^0.910"
jupyterlab = "^3.1.6"
types-PyYAML = "^5.4.6"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
